// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner renders 1`] = `
<div
  class="css-gerq0w"
  data-testid="spinner"
>
  <svg
    aria-labelledby="spinner-title-1"
    class="css-1p3riid"
    data-testid="svg"
    height="100"
    role="img"
    viewBox="0 0 100 100"
    width="100"
  >
    <title
      id="spinner-title-1"
    >
      A spinner is active. Please wait while the page completes a task.
    </title>
    <circle
      class="css-g20xlb"
      cx="50"
      cy="50"
      fill="none"
      r="20"
      stroke-dasharray="89, 200"
      stroke-dashoffset="0"
      stroke-linecap="round"
      stroke-width="4"
    />
  </svg>
</div>
`;

exports[`Spinner renders with children 1`] = `
<div
  class="css-11inowr-Spinner"
  data-testid="container"
>
  <div
    class="css-1sr7212"
    data-testid="spinner"
  >
    <svg
      aria-labelledby="spinner-title-2"
      class="css-1p3riid"
      data-testid="svg"
      height="100"
      role="img"
      viewBox="0 0 100 100"
      width="100"
    >
      <title
        id="spinner-title-2"
      >
        A spinner is active. Please wait while the page completes a task.
      </title>
      <circle
        class="css-g20xlb"
        cx="50"
        cy="50"
        fill="none"
        r="20"
        stroke-dasharray="89, 200"
        stroke-dashoffset="0"
        stroke-linecap="round"
        stroke-width="4"
      />
    </svg>
  </div>
  <div
    class="css-1ii5rw4-Spinner"
    data-testid="overlay"
  />
  <div
    class="css-1j45yx8-Spinner"
  >
    <span>
      Overlay me with the spinner
    </span>
  </div>
</div>
`;
